--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="/about.html" title="About Olena Likhytska">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html#contact" title="Contact Matt Delac">Contact me</a>
+                        <a class="nav-link" href="/about.html#contact" title="Contact Olena Likhytska">Contact me</a>
                     </li>
                 </ul>
             </div>
